[package]
name = "waku-test-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.15"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"